Fixed bottom bar overlapping on mobile

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ button {
 
 
 #messages {
-    height: calc(100vh - 50px);
+    height: calc(100dvh - 50px);
     overflow-y: scroll;
     overflow-x: hidden;
 }
